@@ -1,71 +1,0 @@
-/*
- * Copyright (C) 2003 Apple Computer, Inc.  All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions
- * are met:
- * 1. Redistributions of source code must retain the above copyright
- *    notice, this list of conditions and the following disclaimer.
- * 2. Redistributions in binary form must reproduce the above copyright
- *    notice, this list of conditions and the following disclaimer in the
- *    documentation and/or other materials provided with the distribution.
- *
- * THIS SOFTWARE IS PROVIDED BY APPLE COMPUTER, INC. ``AS IS'' AND ANY
- * EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
- * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
- * PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL APPLE COMPUTER, INC. OR
- * CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
- * EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
- * PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
- * PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY
- * OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
- * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
- * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
- */
-
-#ifndef __edit_caretimpl_h__
-#define __edit_caretimpl_h__
-
-#include <edit_caret.h>
-#include <shared.h>
-
-namespace DOM {
-    class DocumentImpl;
-    class NodeImpl;
-}
-
-namespace khtml {
-
-class CaretImpl : public Shared<CaretImpl>
-{
-public:
-    CaretImpl(DOM::NodeImpl *node, long offset);
-    ~CaretImpl();
-
-    DOM::NodeImpl *node() const { return m_node; }
-    long offset() const { return m_offset; }
-    bool startOfLine() const { return m_startOfLine; }
-    
-    friend class Caret;
-    friend class KHTMLPart;
-
-private:
-    CaretImpl(const CaretImpl *c) {};
-
-    void moveForwardByCharacter();
-    void moveBackwardByCharacter();
-
-    void setStartOfLine(bool);
-    
-    void setNode(DOM::NodeImpl *);
-    void setOffset(long offset) { m_offset = offset; }
-    void setPosition(DOM::NodeImpl *, long);
-    void adjustPosition();
-
-
-    long m_startOfLine;
-};
-
-}; // end namespace khtml
-
-#endif
